--- a/corpse-ii/package.json
+++ b/corpse-ii/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@vercel/blob": "^0.0.2",
     "next": "16.1.2",
     "postgres": "3.4.8",
     "react": "19.2.3",
