--- a/corpse-ii/package.json
+++ b/corpse-ii/package.json
@@ -1,29 +1,33 @@
 {
-  "name": "corpse-ii",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
-  },
-  "dependencies": {
-    "@vercel/blob": "^0.0.2",
-    "filtrex": "^3.1.0",
-    "next": "16.1.2",
-    "postgres": "3.4.8",
-    "react": "19.2.3",
-    "react-dom": "19.2.3"
-  },
-  "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "16.1.2",
-    "tailwindcss": "^4",
-    "typescript": "^5"
-  }
+    "name": "corpse-ii",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "eslint .",
+        "lint:fix": "eslint --fix .",
+        "format": "prettier --write .",
+        "format:check": "prettier --check ."
+    },
+    "dependencies": {
+        "@vercel/blob": "^0.0.2",
+        "filtrex": "^3.1.0",
+        "next": "16.1.2",
+        "postgres": "3.4.8",
+        "react": "19.2.3",
+        "react-dom": "19.2.3"
+    },
+    "devDependencies": {
+        "@tailwindcss/postcss": "^4",
+        "@types/node": "^20",
+        "@types/react": "^19",
+        "@types/react-dom": "^19",
+        "eslint": "^9",
+        "eslint-config-next": "16.1.2",
+        "prettier": "^3.8.0",
+        "tailwindcss": "^4",
+        "typescript": "^5"
+    }
 }
