Update a property name for non-zScore categories

--- a/corpse-ii/configs-copy/batters_config_v1.json
+++ b/corpse-ii/configs-copy/batters_config_v1.json
@@ -2,19 +2,19 @@
     "base_projection": "thebatx",
     "categories": {
         "playerid": {
-            "noFormula": true,
+            "noValuation": true,
             "destinationColumn": "player_id"
         },
         "PlayerName": {
-            "noFormula": true,
+            "noValuation": true,
             "destinationColumn": "name"
         },
         "PA": {
-            "noFormula": true,
+            "noValuation": true,
             "isRateStat": false
         },
         "AB": {
-            "noFormula": true,
+            "noValuation": true,
             "isRateStat": false
         },
         "HR": {
