--- a/corpse-ii/package.json
+++ b/corpse-ii/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "@vercel/blob": "^0.0.2",
         "filtrex": "^3.1.0",
+        "googleapis": "^170.1.0",
         "next": "16.1.2",
         "postgres": "3.4.8",
         "react": "19.2.3",
