Switch to ATC; commit copies of new configs

--- a/corpse-ii/configs-copy/batters_config_v1.json
+++ b/corpse-ii/configs-copy/batters_config_v1.json
@@ -1,5 +1,5 @@
 {
-    "base_projection": "thebatx",
+    "base_projection": "atc",
     "categories": {
         "playerid": {
             "noValuation": true,
