--- a/corpse-ii/configs-copy/pitchers_config_v1.json
+++ b/corpse-ii/configs-copy/pitchers_config_v1.json
@@ -1,5 +1,5 @@
 {
-    "base_projection": "steamer",
+    "base_projection": "atc",
     "categories": {
         "playerid": {
             "noValuation": true,
