--- a/.github/workflows/get-latest-teams-and-players.yml
+++ b/.github/workflows/get-latest-teams-and-players.yml
@@ -11,25 +11,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Random delay
-        run: sleep $((RANDOM % 300))
-
       - name: POST to CORPSE fetch-teams API route
-        env:
-          BEARER_TOKEN: ${{ secrets.CORPSE_API_TOKEN }}
         run: |
-          if [ -z "$BEARER_TOKEN" ]; then
+          if [ -z "${{ secrets.CORPSE_API_TOKEN }}" ]; then
             echo "Token is empty!"
             exit 1
           else
-            echo "Token is set (length: ${#BEARER_TOKEN})"
+            echo "Token is set"
           fi
 
           set -e
 
           curl -f --request POST \
             --url https://corpse-ii.vercel.app/api/v1/fetch-teams \
-            --header "Authorization: Bearer ${BEARER_TOKEN}"
+            --header "Authorization: Bearer ${{ secrets.CORPSE_API_TOKEN }}"
 
       - name: Check response
         if: failure()
