Set environment to Prod

--- a/.github/workflows/get-latest-teams-and-players.yml
+++ b/.github/workflows/get-latest-teams-and-players.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   send-request:
     runs-on: ubuntu-latest
+    environment: Production
 
     steps:
       - name: POST to CORPSE fetch-teams API route
